crates/rome_formatter/tests/specs/prettier/range/module-export3.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: module-export3.js

---
# Input
```js
import  def , {named}  from    'x'

export *  from   'd'

export    const  x
  =  42

export   default  <<<PRETTIER_RANGE_START>>>  42<<<PRETTIER_RANGE_END>>>


```

# Output
```js
import def, { named } from 'x';

export * from 'd';

export const x = 42;

export   default  <<<PRETTIER_RANGE_START>>>  42<<<PRETTIER_RANGE_END>>>

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ module-export3.js:8:21
  │
8 │ export   default  <<<PRETTIER_RANGE_START>>>  42<<<PRETTIER_RANGE_END>>>
  │                     ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ module-export3.js:8:51
  │
8 │ export   default  <<<PRETTIER_RANGE_START>>>  42<<<PRETTIER_RANGE_END>>>
  │                                                   ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ''
   ┌─ module-export3.js:10:1
   │
10 │ 
   │ ^ Expected an expression here


```


